--- a/app/src/main/res/layout/fragment_settings_anti_theft.xml
+++ b/app/src/main/res/layout/fragment_settings_anti_theft.xml
@@ -1,53 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
+        android:id="@+id/tvAntiTheftTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Anti Theft"/>
+        android:text="Anti Theft"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tvGeoAlarm"/>
 
     <TextView
+        android:id="@+id/tvGeoAlarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Geofencing Alarm"/>
+        android:text="Geofencing Alarm"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvAntiTheftTitle"
+        app:layout_constraintBottom_toTopOf="@+id/tvGeoRadius"/>
 
     <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/switch1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/tvGeoAlarm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvAntiTheftTitle"
+        app:layout_constraintBottom_toTopOf="@+id/tvGeoRadius"/>
 
     <TextView
+        android:id="@+id/tvGeoRadius"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Geofencing Radius"/>
+        android:text="Geofencing Radius"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvGeoAlarm"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
 
     <Spinner
         android:id="@+id/spGeoRadius"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown"/>
+        android:spinnerMode="dropdown"
+        app:layout_constraintStart_toEndOf="@+id/tvGeoRadius"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvGeoAlarm"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
 
-    <Spinner
-        android:id="@+id/spGeoRadiusUnits"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown"/>
-
-    <TextView
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Vibration Alarm "/>
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spGeoRadius"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-</LinearLayout>
+
+        <Spinner
+            android:id="@+id/spGeoRadiusUnits"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vibration Alarm " />
+
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
