Added icons and updated navigation

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/llHomeCenter"
+        app:layout_constraintEnd_toStartOf="@+id/speedometerView"
         app:layout_constraintStart_toStartOf="parent">
 
         <com.example.lk.benoreno.ControlView.DisplayTilePasView
@@ -46,7 +46,7 @@
     </LinearLayout>
 
     <com.example.lk.benoreno.ControlView.SpeedometerView
-        android:id="@+id/llHomeCenter"
+        android:id="@+id/speedometerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
@@ -64,7 +64,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/llHomeCenter">
+        app:layout_constraintStart_toEndOf="@+id/speedometerView">
 
         <com.example.lk.benoreno.ControlView.DisplayTileView
             android:id="@+id/dispDistance"
