--- a/app/src/main/res/layout/control_display_tile.xml
+++ b/app/src/main/res/layout/control_display_tile.xml
@@ -16,10 +16,8 @@
         app:layout_constraintVertical_chainStyle="packed">
 
         <TextView
+            style="@style/bigText"
             android:id="@+id/tvValue"
-            android:textSize="30sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="Value" />
 
         <TextView
