--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -14,7 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/mapView"
-        app:layout_constraintEnd_toStartOf="@id/linearLayout"
+        app:layout_constraintEnd_toStartOf="@id/llBottom"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -31,12 +31,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/linearLayout"
+        app:layout_constraintEnd_toStartOf="@id/llBottom"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchMapLayout"/>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/llBottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -44,10 +44,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/mapView"
         app:layout_constraintTop_toTopOf="parent">
-        <TextView
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Destination:"/>
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_map"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -60,10 +61,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""/>
-        <TextView
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Turn left"/>
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_navi_left"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,10 +74,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""/>
-        <TextView
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Speed:"/>
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_meter"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
