--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_navigation"
-        android:icon="@drawable/ic_map"
+        android:icon="@drawable/ic_navi"
         android:title="navi" />
 
     <item
